enable_testing()

add_executable(Vec3-test
        ${CMAKE_CURRENT_LIST_DIR}/Vec3-test.cpp
)
add_executable(Quaternion-test
        ${CMAKE_CURRENT_LIST_DIR}/Quaternion-test.cpp
)
add_executable(PID-test
        ${CMAKE_CURRENT_LIST_DIR}/PID-test.cpp
)
add_executable(LQR-test
        ${CMAKE_CURRENT_LIST_DIR}/LQR-test.cpp
)
add_executable(KF-test
        ${CMAKE_CURRENT_LIST_DIR}/KF-test.cpp
)

target_link_libraries(Vec3-test
        PRIVATE
        GTest::gtest_main
        Math
)
target_link_libraries(Quaternion-test
        PRIVATE
        GTest::gtest_main
        Math
)
target_link_libraries(PID-test
        PRIVATE
        GTest::gtest_main
        Control
)
target_link_libraries(LQR-test
        PRIVATE
        GTest::gtest_main
        Control
)
target_link_libraries(KF-test
        PRIVATE
        GTest::gtest_main
        Estimate
)

include(GoogleTest)
gtest_discover_tests(
        Vec3-test
        Quaternion-test
        PID-test
        LQR-test
)